RESOLVED FIXED97329
[WTR] Memory leaks in InjectedBundleController::initialize()
https://bugs.webkit.org/show_bug.cgi?id=97329
Summary [WTR] Memory leaks in InjectedBundleController::initialize()
Sudarsana Nagineni (babu)
Reported 2012-09-21 05:05:53 PDT
Noticed the following leaks while running the webkit2 api tests. ==26661== 72 (24 direct, 48 indirect) bytes in 1 blocks are definitely lost in loss record 4,528 of 6,028 ==26661== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==26661== by 0x902468A: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==26661== by 0x52EAFEA: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==26661== by 0x533673D: WebKit::WebString::createFromUTF8String(char const*) (WebString.h:60) ==26661== by 0x533633D: WKStringCreateWithUTF8CString (WKString.cpp:41) ==26661== by 0x188405D1: TestWebKitAPI::InjectedBundleController::initialize(OpaqueWKBundle const*, void const*) (InjectedBundleController.cpp:73) ==26661== by 0x18841C4B: WKBundleInitialize (InjectedBundleMain.cpp:37) ==26661== by 0x54C63E2: WebKit::InjectedBundle::load(WebKit::APIObject*) (InjectedBundleEfl.cpp:57) ==26661== 72 (24 direct, 48 indirect) bytes in 1 blocks are definitely lost in loss record 4,529 of 6,028 ==26661== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==26661== by 0x902468A: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==26661== by 0x52EAFEA: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==26661== by 0x533673D: WebKit::WebString::createFromUTF8String(char const*) (WebString.h:60) ==26661== by 0x533633D: WKStringCreateWithUTF8CString (WKString.cpp:41) ==26661== by 0x188405F3: TestWebKitAPI::InjectedBundleController::initialize(OpaqueWKBundle const*, void const*) (InjectedBundleController.cpp:75) ==26661== by 0x18841C4B: WKBundleInitialize (InjectedBundleMain.cpp:37) ==26661== by 0x54C63E2: WebKit::InjectedBundle::load(WebKit::APIObject*) (InjectedBundleEfl.cpp:57)
Attachments
Patch (2.00 KB, patch)
2012-09-21 05:17 PDT, Sudarsana Nagineni (babu)
no flags
Sudarsana Nagineni (babu)
Comment 1 2012-09-21 05:17:09 PDT
WebKit Review Bot
Comment 2 2012-09-21 09:13:38 PDT
Comment on attachment 165119 [details] Patch Clearing flags on attachment: 165119 Committed r129232: <http://trac.webkit.org/changeset/129232>
WebKit Review Bot
Comment 3 2012-09-21 09:13:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.