[WTR] Memory leaks in InjectedBundleController::initialize() https://bugs.webkit.org/show_bug.cgi?id=97329

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2012-09-21
Reviewed by Alexey Proskuryakov.

Fix leaks in InjectedBundleController::initialize() by adopting
strings created with WKStringCreateWithUTF8CString().

* TestWebKitAPI/InjectedBundleController.cpp:
(TestWebKitAPI::InjectedBundleController::initialize):

Canonical link: https://commits.webkit.org/115278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129232 268f45cc-cd09-0410-ab3c-d52691b4dbfc