Tools/TestWebKitAPI/InjectedBundleController.cpp
@@ -70,9 +70,11 @@ void InjectedBundleController::initialize(WKBundleRef bundle, WKTypeRef initiali
     assert(WKGetTypeID(initializationUserData) == WKDictionaryGetTypeID());
     WKDictionaryRef initializationDictionary = static_cast<WKDictionaryRef>(initializationUserData);
 
-    WKStringRef testName = static_cast<WKStringRef>(WKDictionaryGetItemForKey(initializationDictionary, WKStringCreateWithUTF8CString("TestName")));
+    WKRetainPtr<WKStringRef> testNameKey(AdoptWK, WKStringCreateWithUTF8CString("TestName"));
+    WKStringRef testName = static_cast<WKStringRef>(WKDictionaryGetItemForKey(initializationDictionary, testNameKey.get()));
 
-    WKTypeRef userData = WKDictionaryGetItemForKey(initializationDictionary, WKStringCreateWithUTF8CString("UserData"));
+    WKRetainPtr<WKStringRef> userDataKey(AdoptWK, WKStringCreateWithUTF8CString("UserData"));
+    WKTypeRef userData = WKDictionaryGetItemForKey(initializationDictionary, userDataKey.get());
     initializeTestNamed(bundle, Util::toSTD(testName), userData);
 }
 
